# titanic-ml

./: .gitignore  pyproject.toml
titanic_ml/: __main__.py
